api_versioned_docs/version-12.1.2.1/index.mdx
---
title: 'avalonia-docs API Reference'
hide_title: true
slug: '/'
uid: 'docset:avalonia'
commentId: 'N:avalonia'
docset: 'avalonia-docs'
packageId: 'avalonia'
assembly: 'avalonia'
apiKind: 'Docset'
generatedBy: 'dotnet-apiref'
tfms:
  - 'net10.0'
  - 'net10.0-android36.0'
  - 'net10.0-browser1.0'
  - 'net10.0-ios26.0'
  - 'net10.0-tvos26.0'
  - 'net10.0-windows7.0'
  - 'net8.0'
  - 'net9.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">avalonia-docs API Reference</h1>

<div className="apiref-page__lead">

Browse the reference documentation below.

</div>

## Packages

- [Avalonia](packages/avalonia.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Android](packages/avalonia-android.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Browser](packages/avalonia-browser.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Controls.Charts](packages/avalonia-controls-charts.mdx) - Comprehensive cross-platform charting library for Avalonia UI applications.
- [Avalonia.Controls.ColorPicker](packages/avalonia-controls-colorpicker.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Controls.Documents.Serialization.Docx](packages/avalonia-controls-documents-serialization-docx.mdx) - DOCX serializer for [Avalonia.Controls.Documents](xref:Avalonia.Controls.Documents) based on Open XML
- [Avalonia.Controls.Documents.Serialization.Html](packages/avalonia-controls-documents-serialization-html.mdx) - HTML serializer for [Avalonia.Controls.Documents](xref:Avalonia.Controls.Documents)
- [Avalonia.Controls.Documents.Serialization.Pdf](packages/avalonia-controls-documents-serialization-pdf.mdx) - Write-only PDF export serializer for [Avalonia.Controls.Documents](xref:Avalonia.Controls.Documents)
- [Avalonia.Controls.Documents.Serialization.Rtf](packages/avalonia-controls-documents-serialization-rtf.mdx) - RTF serializer for [Avalonia.Controls.Documents](xref:Avalonia.Controls.Documents) with high-fidelity import and export support
- [Avalonia.Controls.Documents.Serialization.Xaml](packages/avalonia-controls-documents-serialization-xaml.mdx) - XAML serializer for [Avalonia.Controls.Documents](xref:Avalonia.Controls.Documents)
- [Avalonia.Controls.Markdown](packages/avalonia-controls-markdown.mdx) - Markdown rendering control for Avalonia applications
- [Avalonia.Controls.MediaPlayer](packages/avalonia-controls-mediaplayer.mdx) - Avalonia [MediaPlayer](xref:Avalonia.Media.MediaPlayer) enables native video and audio playback across Windows, macOS, and Linux, supporting multiple formats for reliable, high-quality media experiences.
- [Avalonia.Controls.MediaPlayer.Abstractions](packages/avalonia-controls-mediaplayer-abstractions.mdx) - Abstractions for Avalonia Accelerate Media Player
- [Avalonia.Controls.PdfViewer](packages/avalonia-controls-pdfviewer.mdx) - A high-performance PDF viewer control for Avalonia UI applications targeting Windows, macOS, Linux, Android, iOS and WebAssembly. Support for accurate rendering, navigation, annotations, search and much more.
- [Avalonia.Controls.RichTextEditor](packages/avalonia-controls-richtexteditor.mdx) - Interactive rich text editor control for Avalonia with selection, formatting, and undo/redo support
- [Avalonia.Controls.TreeDataGrid](packages/avalonia-controls-treedatagrid.mdx) - [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) is a control which displays hierarchical and tabular data together in a single view. It is a combination of a [TreeView](xref:Avalonia.Controls.TreeView) and DataGrid control.
- [Avalonia.Controls.VirtualKeyboard](packages/avalonia-controls-virtualkeyboard.mdx) - Avalonia on-screen keyboard control
- [Avalonia.Controls.WebView](packages/avalonia-controls-webview.mdx) - Avalonia WebView component enables embedding web content in Avalonia applications for use cases like documentation, dashboards, and interactive content.
- [Avalonia.Desktop](packages/avalonia-desktop.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Fonts.Inter](packages/avalonia-fonts-inter.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.FreeDesktop](packages/avalonia-freedesktop.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Headless.NUnit](packages/avalonia-headless-nunit.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Headless.Vnc](packages/avalonia-headless-vnc.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Headless.XUnit](packages/avalonia-headless-xunit.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.LinuxFramebuffer](packages/avalonia-linuxframebuffer.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Markup.Xaml.Loader](packages/avalonia-markup-xaml-loader.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Native](packages/avalonia-native.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Skia](packages/avalonia-skia.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Themes.Fluent](packages/avalonia-themes-fluent.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Wayland](packages/avalonia-wayland.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.Win32.Interoperability](packages/avalonia-win32-interoperability.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.X11](packages/avalonia-x11.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [Avalonia.iOS](packages/avalonia-ios.mdx) - Avalonia is a cross-platform UI framework for .NET providing a flexible styling system and supporting a wide range of Operating Systems such as Windows, Linux, macOS and with experimental support for Android, iOS and WebAssembly.
- [AvaloniaUI.DiagnosticsSupport](packages/avaloniaui-diagnosticssupport.mdx) - The Diagnostics Support package is responsible for establishing a connection bridge between the user app and AvaloniaUI Developer Tools process.

## Namespaces

- [Avalonia](avalonia/index.mdx)
- [Avalonia.Android](avalonia/android/index.mdx)
- [Avalonia.Android.Automation](avalonia/android/automation/index.mdx)
- [Avalonia.Android.Internal](avalonia/android/internal/index.mdx)
- [Avalonia.Android.Platform.SkiaPlatform](avalonia/android/platform/skiaplatform/index.mdx)
- [Avalonia.Animation](avalonia/animation/index.mdx)
- [Avalonia.Animation.Easings](avalonia/animation/easings/index.mdx)
- [Avalonia.Automation](avalonia/automation/index.mdx)
- [Avalonia.Automation.Peers](avalonia/automation/peers/index.mdx)
- [Avalonia.Automation.Provider](avalonia/automation/provider/index.mdx)
- [Avalonia.Browser](avalonia/browser/index.mdx)
- [Avalonia.Collections](avalonia/collections/index.mdx)
- [Avalonia.Collections.Pooled](avalonia/collections/pooled/index.mdx)
- [Avalonia.Controls](avalonia/controls/index.mdx)
- [Avalonia.Controls.ApplicationLifetimes](avalonia/controls/applicationlifetimes/index.mdx)
- [Avalonia.Controls.Automation.Peers](avalonia/controls/automation/peers/index.mdx)
- [Avalonia.Controls.Charts](avalonia/controls/charts/index.mdx)
- [Avalonia.Controls.Chrome](avalonia/controls/chrome/index.mdx)
- [Avalonia.Controls.Converters](avalonia/controls/converters/index.mdx)
- [Avalonia.Controls.Diagnostics](avalonia/controls/diagnostics/index.mdx)
- [Avalonia.Controls.Documents](avalonia/controls/documents/index.mdx)
- [Avalonia.Controls.Documents.Primitives](avalonia/controls/documents/primitives/index.mdx)
- [Avalonia.Controls.Documents.Primitives.Actions](avalonia/controls/documents/primitives/actions/index.mdx)
- [Avalonia.Controls.Documents.Primitives.Components](avalonia/controls/documents/primitives/components/index.mdx)
- [Avalonia.Controls.Documents.Primitives.Toolbar](avalonia/controls/documents/primitives/toolbar/index.mdx)
- [Avalonia.Controls.Documents.Serialization.Docx](avalonia/controls/documents/serialization/docx/index.mdx)
- [Avalonia.Controls.Documents.Serialization.Html](avalonia/controls/documents/serialization/html/index.mdx)
- [Avalonia.Controls.Documents.Serialization.Markdown](avalonia/controls/documents/serialization/markdown/index.mdx)
- [Avalonia.Controls.Documents.Serialization.Pdf](avalonia/controls/documents/serialization/pdf/index.mdx)
- [Avalonia.Controls.Documents.Serialization.Rtf](avalonia/controls/documents/serialization/rtf/index.mdx)
- [Avalonia.Controls.Documents.Serialization.Xaml](avalonia/controls/documents/serialization/xaml/index.mdx)
- [Avalonia.Controls.Documents.TextModel](avalonia/controls/documents/textmodel/index.mdx)
- [Avalonia.Controls.Embedding](avalonia/controls/embedding/index.mdx)
- [Avalonia.Controls.Embedding.Offscreen](avalonia/controls/embedding/offscreen/index.mdx)
- [Avalonia.Controls.Generators](avalonia/controls/generators/index.mdx)
- [Avalonia.Controls.Gtk](avalonia/controls/gtk/index.mdx)
- [Avalonia.Controls.Macios.Interop](avalonia/controls/macios/interop/index.mdx)
- [Avalonia.Controls.Macios.Interop.WebKit](avalonia/controls/macios/interop/webkit/index.mdx)
- [Avalonia.Controls.MediaPlayer.Abstractions](avalonia/controls/mediaplayer/abstractions/index.mdx)
- [Avalonia.Controls.Metadata](avalonia/controls/metadata/index.mdx)
- [Avalonia.Controls.Mixins](avalonia/controls/mixins/index.mdx)
- [Avalonia.Controls.Models](avalonia/controls/models/index.mdx)
- [Avalonia.Controls.Models.TreeDataGrid](avalonia/controls/models/treedatagrid/index.mdx)
- [Avalonia.Controls.Notifications](avalonia/controls/notifications/index.mdx)
- [Avalonia.Controls.OAuth2](avalonia/controls/oauth2/index.mdx)
- [Avalonia.Controls.OAuth2.MetadataClient](avalonia/controls/oauth2/metadataclient/index.mdx)
- [Avalonia.Controls.Pdf.Controls](avalonia/controls/pdf/controls/index.mdx)
- [Avalonia.Controls.Pdf.Converters](avalonia/controls/pdf/converters/index.mdx)
- [Avalonia.Controls.Pdf.Core](avalonia/controls/pdf/core/index.mdx)
- [Avalonia.Controls.Pdf.Native](avalonia/controls/pdf/native/index.mdx)
- [Avalonia.Controls.Pdf.Services](avalonia/controls/pdf/services/index.mdx)
- [Avalonia.Controls.Platform](avalonia/controls/platform/index.mdx)
- [Avalonia.Controls.Presenters](avalonia/controls/presenters/index.mdx)
- [Avalonia.Controls.Primitives](avalonia/controls/primitives/index.mdx)
- [Avalonia.Controls.Primitives.Converters](avalonia/controls/primitives/converters/index.mdx)
- [Avalonia.Controls.Primitives.PopupPositioning](avalonia/controls/primitives/popuppositioning/index.mdx)
- [Avalonia.Controls.Remote](avalonia/controls/remote/index.mdx)
- [Avalonia.Controls.Rendering](avalonia/controls/rendering/index.mdx)
- [Avalonia.Controls.Selection](avalonia/controls/selection/index.mdx)
- [Avalonia.Controls.Shapes](avalonia/controls/shapes/index.mdx)
- [Avalonia.Controls.Templates](avalonia/controls/templates/index.mdx)
- [Avalonia.Controls.Utils](avalonia/controls/utils/index.mdx)
- [Avalonia.Data](avalonia/data/index.mdx)
- [Avalonia.Data.Converters](avalonia/data/converters/index.mdx)
- [Avalonia.Data.Core](avalonia/data/core/index.mdx)
- [Avalonia.Data.Core.Parsers](avalonia/data/core/parsers/index.mdx)
- [Avalonia.Data.Core.Plugins](avalonia/data/core/plugins/index.mdx)
- [Avalonia.DesignerSupport](avalonia/designersupport/index.mdx)
- [Avalonia.DesignerSupport.Remote](avalonia/designersupport/remote/index.mdx)
- [Avalonia.DesignerSupport.Remote.HtmlTransport](avalonia/designersupport/remote/htmltransport/index.mdx)
- [Avalonia.Diagnostics](avalonia/diagnostics/index.mdx)
- [Avalonia.Dialogs](avalonia/dialogs/index.mdx)
- [Avalonia.Dialogs.Internal](avalonia/dialogs/internal/index.mdx)
- [Avalonia.Fonts.Inter](avalonia/fonts/inter/index.mdx)
- [Avalonia.FreeDesktop.DBus](avalonia/freedesktop/dbus/index.mdx)
- [Avalonia.Headless.NUnit](avalonia/headless/nunit/index.mdx)
- [Avalonia.Headless.Vnc](avalonia/headless/vnc/index.mdx)
- [Avalonia.Headless.XUnit](avalonia/headless/xunit/index.mdx)
- [Avalonia.Input](avalonia/input/index.mdx)
- [Avalonia.Input.GestureRecognizers](avalonia/input/gesturerecognizers/index.mdx)
- [Avalonia.Input.Platform](avalonia/input/platform/index.mdx)
- [Avalonia.Input.Raw](avalonia/input/raw/index.mdx)
- [Avalonia.Input.TextInput](avalonia/input/textinput/index.mdx)
- [Avalonia.Interactivity](avalonia/interactivity/index.mdx)
- [Avalonia.Layout](avalonia/layout/index.mdx)
- [Avalonia.LinuxFramebuffer](avalonia/linuxframebuffer/index.mdx)
- [Avalonia.LinuxFramebuffer.Input](avalonia/linuxframebuffer/input/index.mdx)
- [Avalonia.LinuxFramebuffer.Input.EvDev](avalonia/linuxframebuffer/input/evdev/index.mdx)
- [Avalonia.LinuxFramebuffer.Input.LibInput](avalonia/linuxframebuffer/input/libinput/index.mdx)
- [Avalonia.LinuxFramebuffer.Input.NullInput](avalonia/linuxframebuffer/input/nullinput/index.mdx)
- [Avalonia.LinuxFramebuffer.Output](avalonia/linuxframebuffer/output/index.mdx)
- [Avalonia.Logging](avalonia/logging/index.mdx)
- [Avalonia.LogicalTree](avalonia/logicaltree/index.mdx)
- [Avalonia.Markup.Parsers](avalonia/markup/parsers/index.mdx)
- [Avalonia.Markup.Xaml](avalonia/markup/xaml/index.mdx)
- [Avalonia.Markup.Xaml.Converters](avalonia/markup/xaml/converters/index.mdx)
- [Avalonia.Markup.Xaml.Diagnostics](avalonia/markup/xaml/diagnostics/index.mdx)
- [Avalonia.Markup.Xaml.MarkupExtensions](avalonia/markup/xaml/markupextensions/index.mdx)
- [Avalonia.Markup.Xaml.MarkupExtensions.CompiledBindings](avalonia/markup/xaml/markupextensions/compiledbindings/index.mdx)
- [Avalonia.Markup.Xaml.Styling](avalonia/markup/xaml/styling/index.mdx)
- [Avalonia.Markup.Xaml.Templates](avalonia/markup/xaml/templates/index.mdx)
- [Avalonia.Markup.Xaml.XamlIl.CompilerExtensions.Transformers](avalonia/markup/xaml/xamlil/compilerextensions/transformers/index.mdx)
- [Avalonia.Markup.Xaml.XamlIl.Runtime](avalonia/markup/xaml/xamlil/runtime/index.mdx)
- [Avalonia.Media](avalonia/media/index.mdx)
- [Avalonia.Media.Fonts](avalonia/media/fonts/index.mdx)
- [Avalonia.Media.Fonts.Tables.Cmap](avalonia/media/fonts/tables/cmap/index.mdx)
- [Avalonia.Media.Imaging](avalonia/media/imaging/index.mdx)
- [Avalonia.Media.Immutable](avalonia/media/immutable/index.mdx)
- [Avalonia.Media.TextFormatting](avalonia/media/textformatting/index.mdx)
- [Avalonia.Media.TextFormatting.Unicode](avalonia/media/textformatting/unicode/index.mdx)
- [Avalonia.Media.Themes.Simple](avalonia/media/themes/simple/index.mdx)
- [Avalonia.Media.Transformation](avalonia/media/transformation/index.mdx)
- [Avalonia.Metadata](avalonia/metadata/index.mdx)
- [Avalonia.Metal](avalonia/metal/index.mdx)
- [Avalonia.MicroCom](avalonia/microcom/index.mdx)
- [Avalonia.OpenGL](avalonia/opengl/index.mdx)
- [Avalonia.OpenGL.Controls](avalonia/opengl/controls/index.mdx)
- [Avalonia.OpenGL.Egl](avalonia/opengl/egl/index.mdx)
- [Avalonia.OpenGL.Features](avalonia/opengl/features/index.mdx)
- [Avalonia.OpenGL.Surfaces](avalonia/opengl/surfaces/index.mdx)
- [Avalonia.Platform](avalonia/platform/index.mdx)
- [Avalonia.Platform.Storage](avalonia/platform/storage/index.mdx)
- [Avalonia.Platform.Storage.FileIO](avalonia/platform/storage/fileio/index.mdx)
- [Avalonia.Platform.Surfaces](avalonia/platform/surfaces/index.mdx)
- [Avalonia.Reactive](avalonia/reactive/index.mdx)
- [Avalonia.Rendering](avalonia/rendering/index.mdx)
- [Avalonia.Rendering.Composition](avalonia/rendering/composition/index.mdx)
- [Avalonia.Rendering.Composition.Animations](avalonia/rendering/composition/animations/index.mdx)
- [Avalonia.Rendering.Composition.Drawing](avalonia/rendering/composition/drawing/index.mdx)
- [Avalonia.Rendering.Composition.Expressions](avalonia/rendering/composition/expressions/index.mdx)
- [Avalonia.Rendering.Composition.Server](avalonia/rendering/composition/server/index.mdx)
- [Avalonia.Rendering.Composition.Transport](avalonia/rendering/composition/transport/index.mdx)
- [Avalonia.Rendering.SceneGraph](avalonia/rendering/scenegraph/index.mdx)
- [Avalonia.Skia](avalonia/skia/index.mdx)
- [Avalonia.Skia.Helpers](avalonia/skia/helpers/index.mdx)
- [Avalonia.Skia.Metal](avalonia/skia/metal/index.mdx)
- [Avalonia.Styling](avalonia/styling/index.mdx)
- [Avalonia.Themes.Fluent](avalonia/themes/fluent/index.mdx)
- [Avalonia.Threading](avalonia/threading/index.mdx)
- [Avalonia.Utilities](avalonia/utilities/index.mdx)
- [Avalonia.VisualTree](avalonia/visualtree/index.mdx)
- [Avalonia.Visuals.Platform](avalonia/visuals/platform/index.mdx)
- [Avalonia.Vulkan](avalonia/vulkan/index.mdx)
- [Avalonia.Vulkan.UnmanagedInterop](avalonia/vulkan/unmanagedinterop/index.mdx)
- [Avalonia.Wayland](avalonia/wayland/index.mdx)
- [Avalonia.Wayland.Server](avalonia/wayland/server/index.mdx)
- [Avalonia.Wayland.Server.Interop](avalonia/wayland/server/interop/index.mdx)
- [Avalonia.Win32.Interoperability](avalonia/win32/interoperability/index.mdx)
- [Avalonia.X11](avalonia/x11/index.mdx)
- [Avalonia.X11.Interop](avalonia/x11/interop/index.mdx)
- [Avalonia.X11.NativeDialogs](avalonia/x11/nativedialogs/index.mdx)
- [Avalonia.X11.Selections](avalonia/x11/selections/index.mdx)
- [Avalonia.iOS](avalonia/ios/index.mdx)
- [AvaloniaUI.DiagnosticsProtocol](avaloniaui/diagnosticsprotocol/index.mdx)
- [AvaloniaUI.DiagnosticsProtocol.Application](avaloniaui/diagnosticsprotocol/application/index.mdx)
- [AvaloniaUI.DiagnosticsProtocol.Protocol](avaloniaui/diagnosticsprotocol/protocol/index.mdx)
- [AvaloniaUI.DiagnosticsProtocol.Serialization](avaloniaui/diagnosticsprotocol/serialization/index.mdx)
- [AvaloniaUI.DiagnosticsProtocol.Tree](avaloniaui/diagnosticsprotocol/tree/index.mdx)
- [AvaloniaUI.DiagnosticsSupport](avaloniaui/diagnosticssupport/index.mdx)
- [AvaloniaUI.DiagnosticsSupport.Avalonia.Handlers](avaloniaui/diagnosticssupport/avalonia/handlers/index.mdx)
- [CompiledAvaloniaXaml](compiledavaloniaxaml/index.mdx)
- [CoreRPC.Utility](corerpc/utility/index.mdx)
- [Tmds.DBus.Protocol](tmds/dbus/protocol/index.mdx)
- [XamlX.IL](xamlx/il/index.mdx)
- [XamlX.Parsers](xamlx/parsers/index.mdx)
- [XamlX.Transform](xamlx/transform/index.mdx)
- [XamlX.TypeSystem](xamlx/typesystem/index.mdx)
- [global](global/index.mdx)
</ApiRefPage>

